Fixed styling of link objects #WEB-4268; Not showing description heard for objects that dont have one #WEB-3768

--- a/app/assets/stylesheets/accessibility.sass
+++ b/app/assets/stylesheets/accessibility.sass
@@ -522,6 +522,8 @@ p.flag, span.flag
             line-height: 200%
         > .copy
           padding-bottom: 15px
+          &.link
+            padding-bottom: 0px
   .rating
     h5
       float: left
