--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1802,6 +1802,9 @@ ul.content_partner_contacts
           padding: 20px 10px 15px 10px
           margin: 0 -10px 20px -10px
           line-height: 170%
+          &.link
+            border: none
+            padding: 0px 10px 15px 10px
         > .references
           border-bottom: 1px solid #cad3db
           padding: 0 10px
